mkv to mp4 transcoding fails with some samples in 2.10
I'm using this command:
"/Applications/VLCStreamer.app/Contents/Resources/VLC/VLC.app/Contents/MacOS/VLC" --ignore-config -I dummy "/Users/rob/Dropbox/MovieSamples/MKV Sample Collection/C_h264_720p_hp_3.1_600kbps_aac_mp3_dual_audio_harry_potter.mkv" vlc://quit --sout='#transcode{vcodec=h264,acodec=aac,channels=2,venc=x264{profile=baseline,level=2.2,keyint=90,bframes=0,ref=1,nocabac},width=640,vb=600,ab=40,audio-sync,deinterlace}:std{access=file,mux=ps,dst="/Users/rob/Library/Application Support/VLCStreamer/Streams/stream.mp4"}' --sout-ffmpeg-strict=-2 -vvv
I have uploaded tests to videolan/streams, and they are also at http://hobbyistsoftware.com/Downloads/Temp/HS_MKV_Samples.zip
results in 2.05 fails to process A problems with sound C,K,O transodes ok B,D,E,F,G,H,I,M,N
results in 2.10 fails to process A,B,G,K,N problems with sound C,O transodes ok D,E,F,H,I,M
will upload log outputs
Edited by Rémi Denis-Courmont