transcode: fix audio format given to filters (fixes #8385)